@@ -1,3 +1,9 @@
+2014-06-04  Igor Zamyatin  <igor.zamyatin@intel.com>
+
+	PR c/58942
+	* cp-array-notation.c (expand_sec_reduce_builtin): Handle the case
+	with a pointer.
+
 2014-06-03  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	DR 1423
