@@ -1,3 +1,9 @@
+2014-06-04  Igor Zamyatin  <igor.zamyatin@intel.com>
+
+	PR c/58942
+	* c-c++-common/cilk-plus/AN/pr58942.c: Check for correct handling of
+	the case with a pointer.
+
 2014-06-04  Marek Polacek  <polacek@redhat.com>
 
 	PR c/30020
