@@ -1,3 +1,9 @@
+2014-06-04  Igor Zamyatin  <igor.zamyatin@intel.com>
+
+	PR c/58942
+	* c-array-notation.c (fix_builtin_array_notation_fn): Handle the case
+	with a pointer.
+
 2014-06-03  Marek Polacek  <polacek@redhat.com>
 
 	PR c/60439
